Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTI429NET.CS

            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListDataRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ListDataRd(UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListDataWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ListDataWr(UInt32 value, UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListRcvCreate@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ListRcvCreate(UInt32 listconfigval, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListStatus@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ListStatus(UInt32 listaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ListXmtCreate@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_ListXmtCreate(UInt32 listconfigval, Int32 count, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgBlockRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_MsgBlockRd(ref MSGFIELDS429 msgfields, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgBlockWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_MsgBlockWr(ref MSGFIELDS429 msgfields, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgCountRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_MsgCountRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgCountWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_MsgCountWr(Int32 bitcount, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgCreate@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_MsgCreate(UInt32 configval, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgDataCountWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_MsgDataCountWr(UInt32 dataval, Int32 bitcount, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgDataRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt32 BTI429_MsgDataRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgDataWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_MsgDataWr(UInt32 value, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgGroupBlockRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_MsgGroupBlockRd([In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 2)] MSGFIELDS429[] msgfields, UInt32[] msgaddrptr, Int32 nummsgs, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgGroupBlockWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_MsgGroupBlockWr([In, Out, MarshalAs(UnmanagedType.LPArray, SizeParamIndex = 2)] MSGFIELDS429[] msgfields, UInt32[] msgaddrptr, Int32 nummsgs, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgGroupRd@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_MsgGroupRd(UInt32[] msgdataptr, UInt32[] msgaddrptr, Int32 nummsgs, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgGroupWr@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_MsgGroupWr(UInt32[] msgdataptr, UInt32[] msgaddrptr, Int32 nummsgs, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgIsAccessed@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_MsgIsAccessed(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgSkipRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_MsgSkipRd(UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgSkipWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern void BTI429_MsgSkipWr(Int32 skip, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgSyncDefine@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_MsgSyncDefine(Int32 enableflag, UInt16 syncmask, UInt16 pinpolarity, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_MsgTriggerDefine@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_MsgTriggerDefine(Int32 enableflag, UInt16 trigmask, UInt16 trigval, UInt16 pinpolarity, UInt32 msgaddr, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ParamAmplitudeConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ParamAmplitudeConfig(UInt32 configval, UInt16 dacval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ParamAmplitudeGet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ParamAmplitudeGet(ref UInt16 dacval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ParamBitCountBuild@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern UInt16 BTI429_ParamBitCountBuild(Int32 bitcount);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ParamBitRateConfig@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ParamBitRateConfig(UInt32 configval, UInt16 divval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_ParamBitRateGet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_ParamBitRateGet(ref UInt16 divval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedBranch@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedBranch(UInt32 condition, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedBranchUpdate@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedBranchUpdate(Int32 destindex, Int32 opcodeindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedBuild@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedBuild(Int32 nummsgs, UInt32[] msgaddr, Int32[] minperiod, Int32[] maxperiod, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedCall@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedCall(UInt32 condition, Int32 destindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedCallUpdate@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedCallUpdate(Int32 destindex, Int32 opcodeindex, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedEntry@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedEntry(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedGap@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedGap(UInt16 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedGapFixed@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedGapFixed(UInt16 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedGapList@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedGapList(UInt16 gapval, UInt32 listaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedHalt@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedHalt(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedLog@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedLog(UInt32 condition, UInt16 tagval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedMode@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedMode(UInt32 modeval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedMsg@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedMsg(UInt32 msgaddr, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedMsgEx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedMsgEx(UInt32 msgaddr, UInt16 gapval, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedPause@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedPause(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedPulse@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedPulse(Int32 dionum, Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedRestart@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedRestart(Int32 channum, IntPtr handleval);
            [DllImport("BTI429.DLL", EntryPoint = "_BTI429_SchedReturn@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
            public static extern Int32 BTI429_SchedReturn(Int32 channum, IntPtr handleval);
